[package]
name = "pincerhex_cli"
description = "CLI following the protocol used in the UAIS Hexbot Competition"
version = "0.1.0"
edition = "2021"
license = "GPL3"
repository = "https://github.com/thyckcorgis/pincerhex"
categories = ["cli"]
keywords = ["board-game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.1.1"
pincerhex_core = { path = "../pincerhex_core" }
