[package]
name = "pincerhex_core"
description = "Core logic for the Hex bot"
version = "0.1.0"
edition = "2021"
license = "GPL3"
repository = "https://github.com/thyckcorgis/pincerhex/pincerhex_core"
categories = ["ai", "no-std"]
keywords = ["hex", "board-game"]

[dependencies]
micromath = { version = "2.0.0", features = ["num-traits"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
