[package]
name = "pincerhex_gui"
description = "GUI for Pincerhex"
version = "0.1.0"
edition = "2021"
license = "GPL3"
repository = "https://github.com/thyckcorgis/pincerhex/pincerhex_gui"
categories = ["gui"]
keywords = ["hex", "board-game"]

[dependencies]
rand = "0.8.5"
pincerhex_core = { path = "../libs/pincerhex_core" }
pincerhex_state = { path = "../libs/pincerhex_state" }
eframe = { version = "0.22.0", default-features = false, features = [
  "persistence",
  "glow",
] }
serde = { version = "1.0.164", features = ["serde_derive"] }
egui = "0.22.0"
log = "0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"

[profile.release]
opt-level = 'z' # small wasm
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 'z'
